19991018-11:58 GMT+1 Victor Szel <info@szelvesz.hu>
   * source/rtl/adir.prg
     + SET DEFAULT handling added.
   * source/rtl/dir.c
     + TOFIX: added to change to filename splitting/merging to use the
       hb_FName*() functions. That's why DIRECTORY() will GPF now on some
       systems (WinNT/MINGW32/normal slash in directory).
   * tests/rtl_test.prg
     ! Small fixes for some time parameters.
   * source/rtl/soundex.c
     ! Small pedantic fix.
   * source/rtl/fm.c
     * TODO text modified.
   * source/rtl/asort.prg
     * Small change.

19991018-09:36 GMT+1 Antonio Linares <alinares@fivetech.com>
  * source/rtl/gt/gtwin.c
    + Added support for Windows apps without console.
    (Now Harbour Windows apps may use the standard Harbour
     debugger and whatever console output is generated -for
     any reason- will be seen so it may be corrected!).

19991018-03:35 EDT Paul Tucker <ptucker@sympatico.ca>
   * makefile.vc
     + source/rdd/rddord.prg

19991018-09:34 GMT+1 Victor Szel <info@szelvesz.hu>
   * source/rtl/rddord.prg moved to
     source/rdd/rddord.prg
     source/rtl/Makefile
     source/rdd/Makefile
     * Moved to the proper place.
       WARNING ! Please update non-GNU make systems.
       (sorry for the huge amount of make file changes)

19991018-03:25 EDT Paul Tucker <ptucker@sympatico.ca>
   * makefile.vc
     + source/rtl/samples.c
     + source/rtl/soundex.c

19991018-09:28 GMT+1 Victor Szel <info@szelvesz.hu>
   * doc/gmake.txt
     ! win32 changed to w32.

19991018-09:21 GMT+1 Victor Szel <info@szelvesz.hu>
   + source/rtl/soundex.c
     source/rtl/Makefile
     source/rtl/dummy.prg
     source/rtl/rtl_test.prg
     doc/funclist.txt
     + SOUNDEX() and related regression tests added.
       WARNING ! Please add new file to non-GNU make systems.
   - source/rtl/afields.prg (removed)
     source/rtl/Makefile
     - AFIELDS() removed from the RTL, since it was already implemented in
       the RDD.
